tests/ui/span/issue-42234-unknown-receiver-type.generic_arg.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-42234-unknown-receiver-type.rs:10:5
   |
LL |     x.unwrap().method_that_could_exist_on_some_type();
   |     ^^^^^^^^^^ cannot infer type for type parameter `T`

error[E0282]: type annotations needed
  --> $DIR/issue-42234-unknown-receiver-type.rs:15:10
   |
LL |         .sum::<_>()
   |          ^^^ cannot infer type of the type parameter `S` declared on the method `sum`
   |
help: consider specifying the generic argument
   |
LL |         .sum::<S>()
   |             ~~~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
